--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iobroker.homehub",
-  "version": "0.0.1",
-  "description": "This is a port of the HomeMatic HomeHub-WebUI for ioBroker.",
+  "version": "0.0.2",
+  "description": "Port of the HomeMatic HomeHub-WebUI for ioBroker",
   "author": {
     "name": "braindead1"
   },
